--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "body-parser": "~1.15.0",
     "csprng": "~0.1.1",
-    "crypto-js": "~3.1.6"
+    "crypto-js": "~3.1.6",
+    "mongoose": "~4.4.7"
   }
 }
